[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "gdbus"
version = "0.0.2"

[dependencies]
bitflags = "^0.7"
libc = "^0.2"
gio-sys = "0.5.0"
glib = "0.4.0"
glib-sys = "0.5.0"
gobject-sys = "0.5.0"

[dev-dependencies]
log = "^0.3.6"

[dev-dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
version = "0.3.0"
